# motorium

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  dependencies.txt  extensions.bzl
.github/workflows/: bazel_build_test.yml  build_test.yml  colcon_build_test.yml  coverage.yml  format_test.yml
lib/absl_vendor/: CMakeLists.txt  package.xml
lib/absl_vendor/env_hooks/: absl_vendor_prefix_path.sh.in
motorium/motorium_control/: BUILD.bazel  CMakeLists.txt  package.xml
motorium/motorium_control/include/motorium_control/: ControllerBase.h  ImplicitJointPDController.h  ImplicitPDController.h  JointPDController.h
motorium/motorium_control/src/: ImplicitJointPDController.cpp  ImplicitPDController.cpp  JointPDController.cpp
motorium/motorium_control/test/: ImplicitPDControllerTest.cpp  testExplicitJointPDController.cpp  testImplicitJointPDController.cpp  testImplicitPDController.cpp
motorium/motorium_core/: BUILD.bazel  CMakeLists.txt  package.xml
motorium/motorium_core/include/motorium_core/: Bounds.h  Check.h  FPSTracker.h  ThreadSafe.h  Types.h
motorium/motorium_hal/: BUILD.bazel  CMakeLists.txt  package.xml
motorium/motorium_hal/include/motorium_hal/: DriverBase.h  RobotHardware.h
motorium/motorium_model/: BUILD.bazel  CMakeLists.txt  ControllerBase.h  package.xml
motorium/motorium_model/include/motorium_model/: FixedIDArray.h  JointIDMap.h  RobotDescription.h  RobotHWInterfaceBase.h  RobotJointAction.h  RobotJointFeedbackAction.h  RobotState.h
motorium/motorium_model/src/: RobotDescription.cpp  RobotState.cpp
motorium/motorium_model/test/: testFixedIDArray.cpp  testRobotDescription.cpp  testRobotState.cpp
motorium/motorium_mujoco/: BUILD.bazel  CMakeLists.txt  package.xml
motorium/motorium_mujoco/exe/: mujocoSimNoTorques.cpp
motorium/motorium_mujoco/include/motorium_mujoco/: MujocoRenderer.h  MujocoSimInterface.h  MujocoUtils.h
motorium/motorium_mujoco/src/: MujocoRenderer.cpp  MujocoSimInterface.cpp
motorium/mujoco_sim_interface/: CMakeLists.txt  package.xml
motorium/mujoco_sim_interface/exe/: mujocoSimNoTorques.cpp
motorium/mujoco_sim_interface/include/mujoco_sim_interface/: MujocoRenderer.h  MujocoSimInterface.h
motorium/mujoco_sim_interface/src/: MujocoSimInterface.cpp
motorium/robot_model/: CMakeLists.txt  package.xml
motorium/robot_model/include/robot_model/: ControllerBase.h  IDMapBase.h  JointIDMap.h  RobotDescription.h  RobotHWInterfaceBase.h  RobotJointAction.h  RobotState.h
motorium/robot_model/src/: RobotDescription.cpp  RobotState.cpp
motorium/robot_model/test/: testRobotDescription.cpp
patches/: BUILD  glew_module.patch
