module(
    name = "motorium",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "glfw", version = "3.3.9")
bazel_dep(name = "glew", version = "2.2.0")

non_module_deps = use_extension("//:extensions.bzl", "non_module_deps")
use_repo(non_module_deps, "mujoco")
