load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "motorium_core",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen//:eigen",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:absl_log",
    ],
)
