load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "motorium_hal",
    hdrs = glob(["include/**/*.h", "include/**/*.hpp"], allow_empty = True),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//motorium/motorium_model",
        "@eigen//:eigen",
    ],
)
