<?xml version="1.0"?>
<package format="3">
  <name>motorium_hal</name>
  <version>0.0.0</version>
  <description>Contains the Motorium Controllers</description>

  <maintainer email="manuel.galliker@gmx.ch">Manuel Yves Galliker</maintainer>

  <license>BSD</license>

  <build_depend>motorium_model</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>