load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "motorium_model",
    srcs = [
        "src/RobotDescription.cpp",
        "src/RobotState.cpp",
    ],
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//motorium/motorium_core",
        "//:urdfdom",
        "@eigen//:eigen",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_test(
    name = "test_robot_description",
    srcs = ["test/testRobotDescription.cpp"],
    deps = [
        ":motorium_model",
        "@com_google_googletest//:gtest_main",
    ],
)
