load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "motorium_mujoco",
    srcs = [
        "src/MujocoSimInterface.cpp",
        "src/MujocoRenderer.cpp",
    ],
    hdrs = glob(["include/**/*.h", "include/**/*.hpp"], allow_empty = True),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//motorium/motorium_core",
        "//motorium/motorium_model",
        "//motorium/motorium_hal",
        "//:ros_urdf",
        "@glfw//:glfw",
        "@glew//:glew_static",
        "@mujoco//:mujoco",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)
